--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Hero from "../components/sections/Hero.astro";
 import AboutUs from "../components/sections/AboutUs.astro";
 import Services from "../components/sections/Services.astro";
 import Portfolio from "../components/sections/Portfolio.astro";
+import Brands from "../components/sections/Brands.astro";
 import Features from "../components/sections/Features.astro";
 import FAQ from "../components/sections/FAQ.astro";
 import CTA from "../components/sections/CTA.astro";
@@ -22,6 +23,7 @@ import ByNumber from "../components/sections/ByNumber.astro";
         <AboutUs />
         <Services />
         <Portfolio />
+        <Brands />
         <Features />
         <FAQ />
         <CTA />
