feat: update Navbar and add MediaShowcase component
- Removed the "Benefits" link from the Navbar and added a new "Media" link.
- Imported and integrated the MediaShowcase component into the index page for enhanced content presentation.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import AboutUs from "../components/sections/AboutUs.astro";
 import Services from "../components/sections/Services.astro";
 import Portfolio from "../components/sections/Portfolio.astro";
 import Brands from "../components/sections/Brands.astro";
+import MediaShowcase from "../components/sections/MediaShowcase.astro";
 import Features from "../components/sections/Features.astro";
 import FAQ from "../components/sections/FAQ.astro";
 import CTA from "../components/sections/CTA.astro";
@@ -24,6 +25,7 @@ import ByNumber from "../components/sections/ByNumber.astro";
         <Services />
         <Portfolio />
         <Brands />
+        <MediaShowcase />
         <Features />
         <FAQ />
         <CTA />
