--- a/src/components/elements/Navbar.astro
+++ b/src/components/elements/Navbar.astro
@@ -30,13 +30,14 @@ const navItems: NavItem[] = [
             { href: "/services/additional-services", text: "Additional Services" }
         ]
     },
-    {
-        href:"/#features",
-        text:"Benefits"
-    },
+
     {
         href:"/#portfolio",
         text:"Packages"
+    },
+    {
+        href:"/media",
+        text:"Media"
     },
     {
         href:"/#cta",
