--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -26,7 +26,7 @@ import Title from "../shared/Title.astro";
                 <div class="flex flex-col sm:flex-row gap-4 justify-center lg:justify-start">
                     <BtnLink 
                         text="Get Started" 
-                        href="#cta" 
+                        href="tel:+251989915436" 
                         variant="primary"
                         className="text-base px-8 py-4"
                     />
